@@ -9,6 +9,7 @@ Xfdesktop 4.x.y
   * Implement monitoring for special file icons (bug #6986).
   * Implement open and empty actions for the trash.
   * Fix crash when cancelling a file download (bug #6876).
+  * Properly invalidate tooltips on file changes.
 
 
 Xfdesktop 4.8.0
